--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/recoai_marketplace
+MONGO_URI=mongodb+srv://sabbirsb220_db_user:sabbirsb220@cluster0.zqwn2b0.mongodb.net/?appName=Cluster0
 JWT_SECRET=supersecretkey_change_in_production
 CLIENT_URL=http://localhost:3000
